# cpp-arcon

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt
cpp-arcon-gui/: README.md  cpp-arcon-gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: application.h  db.h  db_scheme.h  decompress.h  pop3_client.h  xml_model.h  xml_parser.h  zip.h
src/: application.cpp  db.cpp  decompress.cpp  main.cpp  pop3_client.cpp  xml_parser.cpp  zip.cpp
xml/: TestXML.xml
